@@ -442,7 +442,7 @@ Test.Unit.Assertions.prototype = {
     element = $(element);
     if(!element.parentNode) return true;
     this.assertNotNull(element);
-    if(element.style && Element.getStyle(element, 'display') == 'none')
+    if(element.style && (Element.getStyle(element, 'display') == 'none' || Element.getStyle(element, 'visibility') == 'hidden'))
       return false;
     
     return this._isVisible(element.parentNode);
