@@ -37,10 +37,15 @@
 	
 	<br />
 	
-	<select name="select" id="select" size="1">
+	<select name="select1" id="select1" size="1">
 		<optgroup label="Label Text">
 			<option value="Value" selected="selected" label="Label Text">  </option>
 		</optgroup>
+	</select>
+	
+	<select name="select2" id="select2" size="2" style="visibility: collapse">
+		<option value="111" label="Label Text 1">Label Text 1</option>
+		<option value="222" label="Label Text 2">Label Text 2</option>
 	</select>
 	
 	<div style="border:1px solid; height:1000px">
